# ShellExecutor-MCDR

./: .gitignore  AGENTS.md  README.md  README_zh_CN.md  gitrepo.toml  pyproject.toml
.github/scripts/: get_link.py
.github/workflows/: ci.yml  release.yml
doc/: Astral-ty.md  CHANGELOG.md  RELEASE.md
src/: mcdreforged.plugin.json
src/lang/: en_us.yml  zh_cn.yml
src/shell_executor/: __init__.py  command.py  runtime.py  utils.py
